--- a/Thesis-Template0_1_0/Appendix/thanks.tex
+++ b/Thesis-Template0_1_0/Appendix/thanks.tex
@@ -1,4 +1,4 @@
-\chapter*{Lời cảm ơn}
+\chapter*{LỜI CẢM ƠN}
 \label{thanks}
 
 Lời đầu tiên, em xin gửi lời cảm ơn sâu sắc tới TS. Lê Đức Hùng. Trong thời gian qua, thầy đã giúp đỡ và chỉ bảo tận tình cho em để hoàn thành khóa luận tốt nghiệp này. Hơn thế nữa, thầy đã tạo cơ hội và điều kiện để em được tham gia vào các dự án và báo khoa học. Chính vì vậy, em được tiếp cận và học hỏi nhiều về việc nghiên cứu và dự án khoa học. Và sau cùng, em đã ứng dụng được những kiến thức khoa học bổ ích từ thầy để hoàn thành khóa luận tốt nghiệp của mình.
