--- a/Thesis-Template0_1_0/Appendix/tomtat.tex
+++ b/Thesis-Template0_1_0/Appendix/tomtat.tex
@@ -1,4 +1,13 @@
-\chapter*{Tóm tắt}
+\chapter*{TÓM TẮT}
 \label{Abstract}
 
-Một hệ thống và mô hình IoT được yêu cầu xây dựng để giúp các quản trị viên Vietnam Posts and Telecommunications Group (VNPT) Tiền Giang giám sát các Base Transceiver Station (BTS) và quan trắc môi trường. Hệ thống phải tạo ra cơ chế giao tiếp và đồng bộ giữa các cảm biến và thiết bị vật lý với cơ sở dữ liệu trên máy chủ ảo và giao diện người dùng linh hoạt để trực quan hóa dữ liệu. Hệ thống IoT sử dụng vi điều khiển giao tiếp vạn vật, các ứng dụng server xử lý dữ liệu, giao diện linh hoạt và mật mã hóa nhẹ, sẽ được xây dựng để phục vụ cho các yêu cầu trên. Hệ thống sử dụng vi điều khiển STM32 giao tiếp vạn vật, IoT gateway ESP32, giao thức tự thiết kế, và mật mã hóa nhẹ ChaCha20-Poly1305. Trên máy chủ ảo, hệ thống vận hành các ứng dụng server: API server, MQTT Broker và cơ sở dữ liệu MongoDB; và máy chủ web cung cấp giao diện người dùng. Trên hệ thống vạn vật, vi điều khiển STM32 đã có cơ chế giao tiếp và đồng bộ dữ liệu với cloud, gateway ESP32 có cơ chế chuyển tiếp dữ liệu. Trên máy chủ ảo, các ứng dụng server được triển khai bằng kỹ thuật Docker Containerizing, máy chủ web Nginx quản lý và cung cấp giao diện web, và mã hóa nhẹ được sử dụng giữa gateway và API server. Hệ thống IoT đưa ra có mô hình phù hợp với cơ chế giao tiếp và đồng bộ giữa thiết bị, gateway, và cloud, giao diện web có sự linh hoạt trong việc tạo và hiển thị các widget. Về việc giao tiếp, thuật toán mã hóa nhẹ đảm bảo việc bảo mật dữ liệu giữa gateway và cloud và giao thức có cấu trúc linh hoạt trong việc nhận diện và phát hiện lỗi.
+% Ngữ cảnh, vấn đề
+Một hệ thống và mô hình \acrfull{iot} được yêu cầu xây dựng để giúp các quản trị viên \acrfull{vnpt} Tiền Giang giám sát các \acrfull{bts}. Hệ thống phải tạo ra cơ chế giao tiếp và đồng bộ giữa các cảm biến và thiết bị vật lý với cơ sở dữ liệu trên máy chủ ảo và giao diện người dùng linh hoạt để trực quan hóa dữ liệu. 
+% Mục tiêu
+Hệ thống \acrshort{iot} sử dụng \acrfull{vdk} giao tiếp vạn vật, các ứng dụng server xử lý dữ liệu, giao diện linh hoạt và mật mã hóa nhẹ, sẽ được xây dựng để phục vụ cho các yêu cầu trên. 
+% Phương pháp
+Hệ thống sử dụng \acrshort{vdk} STM32 giao tiếp vạn vật, \acrshort{iot} gateway ESP32, giao thức tự thiết kế, và mật mã hóa nhẹ ChaCha20-Poly1305. Trên máy chủ ảo, hệ thống vận hành các ứng dụng server: \acrfull{api} server, MQTT Broker và cơ sở dữ liệu MongoDB; và máy chủ web cung cấp giao diện người dùng. 
+% Kết quả
+Trên hệ thống vạn vật, \acrshort{vdk} STM32 đã có cơ chế giao tiếp và đồng bộ dữ liệu với cloud, gateway ESP32 có cơ chế chuyển tiếp dữ liệu. Trên máy chủ ảo, các ứng dụng server được triển khai bằng kỹ thuật Docker Containerizing, máy chủ web Nginx quản lý và cung cấp giao diện web, và mã hóa nhẹ được sử dụng giữa gateway và \acrshort{api} server. 
+% Kết luận
+Hệ thống \acrshort{iot} đưa ra có mô hình phù hợp với cơ chế giao tiếp và đồng bộ giữa thiết bị, gateway, và cloud, giao diện web có sự linh hoạt trong việc tạo và hiển thị các widget. Về việc giao tiếp, thuật toán mã hóa nhẹ đảm bảo việc bảo mật dữ liệu giữa gateway và cloud và giao thức có cấu trúc linh hoạt trong việc nhận diện và phát hiện lỗi.
