--- a/Thesis-Template0_1_0/Title/title.tex
+++ b/Thesis-Template0_1_0/Title/title.tex
@@ -1,7 +1,9 @@
+% fix anchor bug
+\hypersetup{pageanchor=false}
 \begin{titlepage}
 
 \begin{center}
-%ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
+ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
 TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
 \textbf{KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
 
@@ -10,13 +12,14 @@ TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
 
 %Tên đề tài Khóa luận tốt nghiệp/Đồ án tốt nghiệp
 
-{ \Large \bfseries THỰC HIỆN NỀN TẢNG WEB SERVER GIAO TIẾP PHẦN CỨNG KẾT HỢP KỸ THUẬT MẬT MÃ HÓA NHẸ CHO CÁC HỆ THỐNG IOT \\[3cm]} 
+{ \Large \bfseries THỰC HIỆN NỀN TẢNG IOT CLOUD GIAO~TIẾP PHẦN CỨNG KẾT HỢP KỸ~THUẬT MẬT MÃ HÓA NHẸ \\[3cm]} 
 
 
 %Chọn trong các dòng sau
 \large KHÓA LUẬN TỐT NGHIỆP CỬ NHÂN\\
 %\large ĐỒ ÁN TỐT NGHIỆP CỬ NHÂN\\
 %\large THỰC TẬP TỐT NGHIỆP CỬ NHÂN\\
+\large NGÀNH KỸ THUẬT ĐIỆN TỬ-VIỄN THÔNG\\
 %Đưa vào dòng này nếu thuộc chương trình Chất lượng cao, hoặc lớp Cử nhân tài năng
 % \large CHƯƠNG TRÌNH CHÍNH QUY\\
 \large CHƯƠNG TRÌNH CHẤT LƯỢNG CAO\\
@@ -37,7 +40,7 @@ Tp. Hồ Chí Minh, tháng 07/2023
 
 
 \begin{center}
-
+ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
 TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
 \textbf{KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
 
@@ -46,18 +49,19 @@ TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
 
 %Tên đề tài Khóa luận tốt nghiệp/Đồ án tốt nghiệp
 
-{ \Large \bfseries THỰC HIỆN NỀN TẢNG WEB SERVER GIAO TIẾP PHẦN CỨNG KẾT HỢP KỸ THUẬT MẬT MÃ HÓA NHẸ CHO CÁC HỆ THỐNG IOT\\[2cm] } 
+{ \Large \bfseries THỰC HIỆN NỀN TẢNG IOT CLOUD GIAO~TIẾP PHẦN CỨNG KẾT HỢP KỸ~THUẬT MẬT MÃ HÓA NHẸ\\[2cm] } 
 
 
 %Chọn trong các dòng sau
 \large KHÓA LUẬN TỐT NGHIỆP CỬ NHÂN\\
 %\large ĐỒ ÁN TỐT NGHIỆP CỬ NHÂN\\
+\large NGÀNH KỸ THUẬT ĐIỆN TỬ-VIỄN THÔNG\\
 %Đưa vào dòng này nếu thuộc chương trình Chất lượng cao, hoặc lớp Cử nhân tài năng
 % \large CHƯƠNG TRÌNH CHÍNH QUY\\[2cm]
 \large CHƯƠNG TRÌNH CHẤT LƯỢNG CAO\\[2cm]
 %\large CHƯƠNG TRÌNH CỬ NHÂN TÀI NĂNG\\[2cm]
 
-\textbf{GIÁO VIÊN HƯỚNG DẪN}\\
+\textbf{NGƯỜI HƯỚNG DẪN KHOA HỌC}\\
 TS. Lê Đức Hùng
 
 \begin{tikzpicture}[remember picture, overlay]
@@ -68,5 +72,6 @@ TS. Lê Đức Hùng
 Tp. Hồ Chí Minh, tháng 07/2023
 
 \end{center}
-
+\thispagestyle{empty}
 \end{titlepage}
+\hypersetup{pageanchor=true}
