--- a/Thesis-Template0_1_0/main.tex
+++ b/Thesis-Template0_1_0/main.tex
@@ -159,6 +159,11 @@
 
 \newpage
 \phantomsection
+\addcontentsline{toc}{chapter}{ABSTRACT}
+\include{Appendix/tomtat.en}
+
+\newpage
+\phantomsection
 \addcontentsline{toc}{chapter}{TÓM TẮT}
 \include{Appendix/tomtat}
 
