--- a/Thesis-Template0_1_0/myacronyms.sty
+++ b/Thesis-Template0_1_0/myacronyms.sty
@@ -6,6 +6,8 @@
 
 \newacronym{vnpt}{VNPT}{Vietnam Posts and Telecommunications Group}
 \newacronym{iot}{IoT}{Internet of things}
-\newacronym{bts}{BTS}{Base Transceiver Station}
+\newacronym[plural=BTS,firstplural=Base Transceiver Stations (BTS)]{bts}{BTS}{Base Transceiver Station}
 \newacronym{api}{API}{Application programming interface}
-\newacronym{vdk}{VĐK}{vi điều khiển}
+\newacronym{mcu}{MCU}{Microcontroller Unit}
+\newacronym{mqtt}{MQTT}{Message Queueing Telemetry Transport}
+\newacronym{vps}{VPS}{Virtual Private Server}
