--- a/Thesis-Template0_1_0/References/references.bib
+++ b/Thesis-Template0_1_0/References/references.bib
@@ -16,3 +16,39 @@
  url                  = {https://www.interviewbit.com/blog/iot-architecture},
  urldate              = {2023-07-22},
  }
+
+@online{Blynk-Overview,
+ author               = {Blynk},
+ title                = {Introduction - Blynk Documentation},
+ url                  = {https://docs.blynk.io/en/},
+ urldate              = {2023-08-01},
+ }
+
+@online{ThingsBoard-Devices-Lib-Overview,
+ author               = {ThingsBoard},
+ title                = {Welcome to the ThingsBoard Devices Library!},
+ url                  = {https://thingsboard.io/docs/devices-library/},
+ urldate              = {2023-08-02},
+ }
+
+@online{ThingsBoard-Def-Overview,
+ author               = {ThingsBoard},
+ title                = {What is ThingsBoard?},
+ url                  = {https://thingsboard.io/docs/getting-started-guides/what-is-thingsboard/},
+ urldate              = {2023-08-02},
+ }
+
+@misc{rfc7539,
+    series =    {Request for Comments},
+    number =    7539,
+    howpublished =  {RFC 7539},
+    publisher = {RFC Editor},
+    doi =       {10.17487/RFC7539},
+    url =       {https://www.rfc-editor.org/info/rfc7539},
+        author =    {Yoav Nir and Adam Langley},
+    title =     {{ChaCha20 and Poly1305 for IETF Protocols}},
+    pagetotal = 45,
+    year =      2015,
+    month =     may,
+    abstract =  {This document defines the ChaCha20 stream cipher as well as the use of the Poly1305 authenticator, both as stand-alone algorithms and as a "combined mode", or Authenticated Encryption with Associated Data (AEAD) algorithm. This document does not introduce any new crypto, but is meant to serve as a stable reference and an implementation guide. It is a product of the Crypto Forum Research Group (CFRG).},
+}
