--- a/Thesis-Template0_1_0/Title/title.tex
+++ b/Thesis-Template0_1_0/Title/title.tex
@@ -8,11 +8,11 @@ TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
 \textbf{KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
 
 
-{ \Large \bfseries Nguyễn Vũ Minh Thành\\[2cm] } 
+{ \Large \bfseries \tenSV \\[2cm] } 
 
 %Tên đề tài Khóa luận tốt nghiệp/Đồ án tốt nghiệp
 
-{ \Large \bfseries THỰC HIỆN NỀN TẢNG IOT CLOUD GIAO~TIẾP PHẦN CỨNG KẾT HỢP KỸ~THUẬT MẬT MÃ HÓA NHẸ \\[3cm]} 
+{ \Large \bfseries \tenKL \\[3cm]} 
 
 
 %Chọn trong các dòng sau
@@ -45,11 +45,11 @@ TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
 \textbf{KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
 
 
-{\large \bfseries Nguyễn Vũ Minh Thành - 19207103\\[2cm]}
+{\large \bfseries \tenSV\space - \mssv \\[2cm]}
 
 %Tên đề tài Khóa luận tốt nghiệp/Đồ án tốt nghiệp
 
-{ \Large \bfseries THỰC HIỆN NỀN TẢNG IOT CLOUD GIAO~TIẾP PHẦN CỨNG KẾT HỢP KỸ~THUẬT MẬT MÃ HÓA NHẸ\\[2cm] } 
+{ \Large \bfseries \tenKL \\[2cm] } 
 
 
 %Chọn trong các dòng sau
@@ -62,7 +62,7 @@ TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
 %\large CHƯƠNG TRÌNH CỬ NHÂN TÀI NĂNG\\[2cm]
 
 \textbf{NGƯỜI HƯỚNG DẪN KHOA HỌC}\\
-TS. Lê Đức Hùng
+\tenGVHD
 
 \begin{tikzpicture}[remember picture, overlay]
   \draw[line width = 2pt] ($(current page.north west) + (2cm,-2cm)$) rectangle ($(current page.south east) + (-1.5cm,2cm)$);
