--- a/Thesis-Template0_1_0/myacronyms.sty
+++ b/Thesis-Template0_1_0/myacronyms.sty
@@ -11,3 +11,10 @@
 \newacronym{mcu}{MCU}{Microcontroller Unit}
 \newacronym{mqtt}{MQTT}{Message Queueing Telemetry Transport}
 \newacronym{vps}{VPS}{Virtual Private Server}
+\newacronym{ptn}{PTN}{Phòng thí nghiệm}
+\newacronym{http}{HTTP}{HyperText Transfer Protocol}
+\newacronym{gpio}{GPIO}{General-purpose input/output}
+\newacronym{aead}{AEAD}{Authenticated Encryption with Associated Data}
+\newacronym{aes}{AES}{Advanced Encryption Standard}
+\newacronym{xor}{XOR}{Exclusive OR}
+\newacronym{aad}{AAD}{Arbitrary length additional authenticated data}
