--- a/Thesis-Template0_1_0/myacronyms.sty
+++ b/Thesis-Template0_1_0/myacronyms.sty
@@ -18,3 +18,10 @@
 \newacronym{aes}{AES}{Advanced Encryption Standard}
 \newacronym{xor}{XOR}{Exclusive OR}
 \newacronym{aad}{AAD}{Arbitrary length additional authenticated data}
+\newacronym{vlan}{VLAN}{Virtual Local Area Network}
+\newacronym{uart}{UART}{Universal Asynchronous Receiver-Transmitter}
+\newacronym{https}{HTTPS}{Hypertext Transfer Protocol Security}
+\newacronym{vs}{VS}{Virtual Storage}
+\newacronym{rest}{REST}{Representational state transfer}
+\newacronym{crud}{CRUD}{Create, read, update, and delete}
+\newacronym{json}{JSON}{JavaScript Object Notation}
