--- a/Thesis-Template0_1_0/References/references.bib
+++ b/Thesis-Template0_1_0/References/references.bib
@@ -52,3 +52,38 @@
     month =     may,
     abstract =  {This document defines the ChaCha20 stream cipher as well as the use of the Poly1305 authenticator, both as stand-alone algorithms and as a "combined mode", or Authenticated Encryption with Associated Data (AEAD) algorithm. This document does not introduce any new crypto, but is meant to serve as a stable reference and an implementation guide. It is a product of the Crypto Forum Research Group (CFRG).},
 }
+
+@online{MQTT-Broker-Def,
+ author               = {HiveMQ},
+ title                = {The Free Public MQTT Broker},
+ url                  = {https://www.hivemq.com/public-mqtt-broker/},
+ urldate              = {2023-08-08},
+ }
+
+@online{CRUD-REST-Service,
+ author               = {Wikipedia},
+ title                = {Create, read, update and delete},
+ url                  = {https://en.wikipedia.org/wiki/Create,_read,_update_and_delete#RESTful_APIs},
+ urldate              = {2023-08-09},
+ }
+
+@online{Mongoose-Solution,
+ author               = {Mongoose},
+ title                = {Elegant mongodb object modeling for node.js},
+ url                  = {https://mongoosejs.com/},
+ urldate              = {2023-08-09},
+ }
+
+@online{MongoDB-Def,
+ author               = {Docker},
+ title                = {What is MongoDB?},
+ url                  = {https://hub.docker.com/_/mongo},
+ urldate              = {2023-08-09},
+ }
+
+@online{Mongo-Replication-Def,
+ author               = {MongoDB},
+ title                = {Replication},
+ url                  = {https://www.mongodb.com/docs/manual/replication/},
+ urldate              = {2023-08-09},
+ }
