--- a/Thesis-Template0_1_0/main.tex
+++ b/Thesis-Template0_1_0/main.tex
@@ -29,6 +29,8 @@
 % Chèn hình, các hình trong luận văn được để trong thư mục Images/
 \usepackage{graphicx}
 \graphicspath{ {Images/} }
+\usepackage{caption}
+\usepackage[export]{adjustbox}
 
 % Chèn và định dạng mã nguồn
 \usepackage{listings}
@@ -144,7 +146,7 @@
 % ========================================================================================= %
 \newcommand{\tenSV}{Nguyễn~Vũ~Minh~Thành} % Dấu ~ là khoảng trắng không được tách (các chữ nối với nhau bằng dấu ~ sẽ nằm cùng 1 dòng
 \newcommand{\mssv}{19207103}
-\newcommand{\tenKL}{THỰC HIỆN NỀN TẢNG IOT SỬ DỤNG CLOUD GIAO~TIẾP PHẦN CỨNG KẾT HỢP KỸ THUẬT MẬT~MÃ~HÓA~NHẸ} % Chú ý dấu ~ trong tên khóa luận
+\newcommand{\tenKL}{THỰC HIỆN NỀN TẢNG IOT SỬ DỤNG HỆ~THỐNG~BACK-END GIAO~TIẾP PHẦN~CỨNG QUA~WIFI KẾT~HỢP KỸ~THUẬT MẬT~MÃ~HÓA~NHẸ} % Chú ý dấu ~ trong tên khóa luận
 \newcommand{\tenGVHD}{TS.~Lê~Đức~Hùng}
 \newcommand{\tenBM}{}
 
