--- a/Thesis-Template0_1_0/myacronyms.sty
+++ b/Thesis-Template0_1_0/myacronyms.sty
@@ -25,3 +25,4 @@
 \newacronym{rest}{REST}{Representational state transfer}
 \newacronym{crud}{CRUD}{Create, read, update, and delete}
 \newacronym{json}{JSON}{JavaScript Object Notation}
+\newacronym{pwa}{PWA}{Progressive web application}
