--- a/Thesis-Template0_1_0/Appendix/publish.tex
+++ b/Thesis-Template0_1_0/Appendix/publish.tex
@@ -1,7 +1,7 @@
-\chapter*{Danh mục công trình của tác giả}
+\chapter*{DANH MỤC CÔNG TRÌNH CỦA TÁC GIẢ}
 \label{Appendix1}
 
 \begin{enumerate}
-\item Tạp chí ABC
-\item Tạp chí XYZ
+\item Nguyễn Tiến Đạt,Nguyễn Vũ Minh Thành,Đỗ Đức Phú,Nguyễn Văn Nhị,Lê Đức Hùng, (2022), ``Thực hiện thuật toán ChaCha20 - Poly1305
+trên phần cứng ứng dụng bảo mật hệ thống IoT'', \textit{Hội nghị Quốc gia về Điện tử, Truyền thông và Công nghệ Thông tin lần thứ XXV, REV-ECIT 2022}.
 \end{enumerate}
