--- a/Thesis-Template0_1_0/Appendix/thanks.tex
+++ b/Thesis-Template0_1_0/Appendix/thanks.tex
@@ -3,8 +3,8 @@
 
 Lời đầu tiên, em xin gửi lời cảm ơn sâu sắc tới TS. Lê Đức Hùng. Trong thời gian qua, thầy đã giúp đỡ và chỉ bảo tận tình cho em để hoàn thành khóa luận tốt nghiệp này. Hơn thế nữa, thầy đã tạo cơ hội và điều kiện để em được tham gia vào các dự án và báo khoa học. Chính vì vậy, em được tiếp cận và học hỏi nhiều về việc nghiên cứu và dự án khoa học. Và sau cùng, em đã ứng dụng được những kiến thức khoa học bổ ích từ thầy để hoàn thành khóa luận tốt nghiệp của mình.
 
-Em xin gửi lời cảm ơn chân thành tới bạn Nguyễn Văn Nhị. Nhị đã giúp đỡ em tìm hiểu và học hỏi nhiều vấn đề liên qua đến lập trình firmware. Ngoài ra, Nhị đã giúp em thiết kế bo mạch phần cứng phục vụ cho khóa luận này. Và cuối cùng, có thể nói rằng Nhị đã giúp em rất nhiều về thiết kế và kỹ thuật phần cứng.
+Tiếp theo, em xin gửi lời cảm ơn chân thành tới bạn Nguyễn Văn Nhị. Nhị đã giúp đỡ em tìm hiểu và học hỏi nhiều vấn đề liên quan đến lập trình firmware. Ngoài ra, Nhị đã giúp em thiết kế bo mạch phần cứng phục vụ cho khóa luận này. Và cuối cùng, có thể nói rằng Nhị đã giúp em rất nhiều về thiết kế và kỹ thuật phần cứng.
 
-Em xin chân chân thành ơn tới các thành viên trong phòng thí nghiệm DESLab. DESLab đã cho em môi trường lý tưởng để làm việc và phát triển. Hơn nữa, DESLab giúp em tiếp cận những máy móc và thiết bị khoa học tiên tiến để em làm việc, học tập, và làm khóa luận.
+Tiếp theo nữa, em xin chân chân thành ơn tới các thành viên trong phòng thí nghiệm DESLab. DESLab đã cho em môi trường lý tưởng để làm việc và phát triển. Hơn nữa, DESLab giúp em tiếp cận những máy móc và thiết bị khoa học tiên tiến để em làm việc, học tập, và làm khóa luận.
 
-Em xin cảm ơn tới quý thầy, cô trong khoa Điện tử - Viễn Thông. Các thầy, cô đã giúp đỡ em rất nhiều về học tập và nghiên cứu.
+Sau cùng, em xin cảm ơn tới quý thầy, cô trong khoa Điện tử - Viễn Thông. Các thầy, cô đã giúp đỡ em rất nhiều về học tập và nghiên cứu.
