--- a/Thesis-Template0_1_0/Appendix/thanks.tex
+++ b/Thesis-Template0_1_0/Appendix/thanks.tex
@@ -5,6 +5,10 @@ Lời đầu tiên, em xin gửi lời cảm ơn sâu sắc tới TS. Lê Đức
 
 Tiếp theo, em xin gửi lời cảm ơn chân thành tới bạn Nguyễn Văn Nhị. Nhị đã giúp đỡ em tìm hiểu và học hỏi nhiều vấn đề liên quan đến lập trình firmware. Ngoài ra, Nhị đã giúp em thiết kế bo mạch phần cứng phục vụ cho khóa luận này. Và cuối cùng, có thể nói rằng Nhị đã giúp em rất nhiều về thiết kế và kỹ thuật phần cứng.
 
-Tiếp theo nữa, em xin chân chân thành ơn tới các thành viên trong phòng thí nghiệm DESLab. DESLab đã cho em môi trường lý tưởng để làm việc và phát triển. Hơn nữa, DESLab giúp em tiếp cận những máy móc và thiết bị khoa học tiên tiến để em làm việc, học tập, và làm khóa luận.
+Lời tiếp theo, em xin cảm ơn anh Hồ Như Tuấn. Anh Tuấn đã tạo nhiều điều kiện giúp em sử dụng bo mạch để thử nghiệm tại các trạm BTS.
+
+Tiếp theo nữa, em xin cảm ơn bạn Trần Tấn Tài. Tài đã giúp em rất nhiều trong việc thiết lập bo phần cứng.
+
+Hơn nữa, em xin chân chân thành ơn tới các thành viên trong phòng thí nghiệm DESLab. DESLab đã cho em môi trường lý tưởng để làm việc và phát triển. Hơn nữa, DESLab giúp em tiếp cận những máy móc và thiết bị khoa học tiên tiến để em làm việc, học tập, và làm khóa luận.
 
 Sau cùng, em xin cảm ơn tới quý thầy, cô trong khoa Điện tử - Viễn Thông. Các thầy, cô đã giúp đỡ em rất nhiều về học tập và nghiên cứu.
