--- a/Thesis-Template0_1_0/Title/title.tex
+++ b/Thesis-Template0_1_0/Title/title.tex
@@ -37,7 +37,7 @@ Tp. Hồ Chí Minh, tháng 07/2023
 
 \pagebreak
 
-
+\myemptypage
 
 \begin{center}
 ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
@@ -73,5 +73,8 @@ Tp. Hồ Chí Minh, tháng 07/2023
 
 \end{center}
 \thispagestyle{empty}
+
+\myemptypage
+
 \end{titlepage}
 \hypersetup{pageanchor=true}
