--- a/Thesis-Template0_1_0/Appendix/tomtat.en.tex
+++ b/Thesis-Template0_1_0/Appendix/tomtat.en.tex
@@ -1,5 +1,6 @@
 \chapter*{ABSTRACT}
 \label{Abstract-EN}
+\addcontentsline{toc}{chapter}{ABSTRACT}
 
 % Context, Problems
 To assist managers of the \acrfull{vnpt} Tien Giang in monitoring \glspl{bts}, an \acrfull{iot} system and model were required to be constructed. The system must develop communication and synchronization techniques between sensors, physical devices, and a database in a \acrfull{vps}, as well as a customized graphical user interface for data visualization.
