--- a/Thesis-Template0_1_0/Appendix/tomtat.tex
+++ b/Thesis-Template0_1_0/Appendix/tomtat.tex
@@ -1,5 +1,6 @@
 \chapter*{TÓM TẮT}
 \label{Abstract}
+\addcontentsline{toc}{chapter}{TÓM TẮT}
 
 % Ngữ cảnh, vấn đề
 Một hệ thống và mô hình \acrfull{iot} được yêu cầu xây dựng để giúp các quản trị viên \acrfull{vnpt} Tiền Giang giám sát các \acrfull{bts}. Hệ thống phải tạo ra cơ chế giao tiếp và đồng bộ giữa các cảm biến và thiết bị vật lý với cơ sở dữ liệu trên \acrfull{vps} và giao diện người dùng linh hoạt để trực quan hóa dữ liệu. 
