--- a/Thesis-Template0_1_0/Appendix/thanks.tex
+++ b/Thesis-Template0_1_0/Appendix/thanks.tex
@@ -1,5 +1,6 @@
 \chapter*{LỜI CẢM ƠN}
 \label{thanks}
+\addcontentsline{toc}{chapter}{LỜI CẢM ƠN}
 
 Lời đầu tiên, em xin gửi lời cảm ơn sâu sắc tới TS. Lê Đức Hùng. Trong thời gian qua, thầy đã giúp đỡ và chỉ bảo tận tình cho em để hoàn thành khóa luận tốt nghiệp này. Hơn thế nữa, thầy đã tạo cơ hội và điều kiện để em được tham gia vào các dự án và báo khoa học. Chính vì vậy, em được tiếp cận và học hỏi nhiều về việc nghiên cứu và dự án khoa học. Và sau cùng, em đã ứng dụng được những kiến thức khoa học bổ ích từ thầy để hoàn thành khóa luận tốt nghiệp của mình.
 
@@ -12,3 +13,17 @@ Tiếp theo nữa, em xin cảm ơn bạn Trần Tấn Tài. Tài đã giúp em 
 Hơn nữa, em xin chân chân thành ơn tới các thành viên trong phòng thí nghiệm DESLab. DESLab đã cho em môi trường lý tưởng để làm việc và phát triển. Hơn nữa, DESLab giúp em tiếp cận những máy móc và thiết bị khoa học tiên tiến để em làm việc, học tập, và làm khóa luận.
 
 Sau cùng, em xin cảm ơn tới quý thầy, cô trong khoa Điện tử - Viễn Thông. Các thầy, cô đã giúp đỡ em rất nhiều về học tập và nghiên cứu.
+
+\begin{table}[h]
+\begin{tabular}{p{0.3\textwidth}p{0.7\textwidth}}
+ &
+ \begin{center}
+Thành phố Hồ Chí Minh, ngày 16 tháng 8 năm 2023
+
+Sinh viên thực hiện
+
+\vspace{3cm}
+Nguyễn Vũ Minh Thành
+ \end{center}
+\end{tabular}
+\end{table}
