--- a/Presentation/ThesisPresentation/slides/conclusion.tex
+++ b/Presentation/ThesisPresentation/slides/conclusion.tex
@@ -1,4 +1,31 @@
-\section{Kết luận}
-\begin{frame}
-    
+\section{Kết luận và hướng mở rộng}
+\begin{frame}{KẾT LUẬN VÀ HƯỚNG MỞ RỘNG}
+    \begin{mybox}[blue]{Kết quả}
+		\begin{itemize}
+			\item Mô hình cụ thể
+			\item Kỹ thuật giao tiếp, đồng bộ, mật mã hóa trên phần cứng và API server.
+			\item Kỹ thuật triển khai hệ thống back-end rõ ràng.
+			\item Giao diện linh hoạt.
+		\end{itemize}
+	\end{mybox}
+\end{frame}
+
+\begin{frame}{KẾT LUẬN VÀ HƯỚNG MỞ RỘNG}
+	\begin{mybox}[yellow]{Hạn chế, giới hạn}
+		\begin{itemize}
+			\item Ít tương tác với các kiểu dữ liệu Virtual Storage, và dữ liệu người dùng.
+			\item Chưa có cơ chế phát sinh sự kiện.
+			\item Số lượng widget hạn chế trên giao diện.
+		\end{itemize}
+	\end{mybox}
+\end{frame}
+
+\begin{frame}{KẾT LUẬN VÀ HƯỚNG MỞ RỘNG}
+	\begin{mybox}[green]{Hướng mở rộng}
+		\begin{itemize}
+			\item Phát triển tương tác với kiểu dữ liệu Virtual Storage và dữ liệu người dùng.
+			\item Triển khai cơ chế sự kiện.
+			\item Phát triển số lượng widget.
+		\end{itemize}
+	\end{mybox}
 \end{frame}
