--- a/Presentation/ThesisPresentation/slides/overview.tex
+++ b/Presentation/ThesisPresentation/slides/overview.tex
@@ -1,5 +1,8 @@
 \section{Tổng quan}
 
-\begin{frame}{Tổng quan}
-    
+\begin{frame}{TỔNG QUAN}
+	\begin{figure}[htbp]
+		\centering
+		\includegraphics[width=1.0\linewidth,height=.85\textheight]{pic/Presentation-Page-1-System-Overview.pdf}
+	\end{figure}
 \end{frame}
