--- a/Presentation/ThesisPresentation/slides/result.tex
+++ b/Presentation/ThesisPresentation/slides/result.tex
@@ -1,4 +1,23 @@
 \section{Kết quả}
-\begin{frame}
-    
+\begin{frame}{KẾT QUẢ}
+	\begin{enumerate}
+		\item Bo mạch.
+		\begin{itemize}
+			\item Kỹ thuật phân giải frame.
+			\item Cơ chế đồng bộ.
+			\item Mật mã hóa nhẹ ChaCha20-Poly1305.
+		\end{itemize}
+		\item VPS.
+		\begin{itemize}
+			\item Kỹ thuật Docker Containerizing triển khai hệ thống back-end.
+			\item Kỹ thuật phân giải frame, đồng bộ, và mật mã hóa được cài đặt trên API server.
+			\item Nginx web server host giao diện web.
+		\end{itemize}
+		\item Giao diện web.
+		\begin{itemize}
+			\item Cung cấp dashboard cho IoT development và BTS board.
+			\item HTTPS và SSL Domain.
+			\item Progressive Web App Certification.
+		\end{itemize}
+	\end{enumerate}
 \end{frame}
