--- a/Presentation/ThesisPresentation/slides.tex
+++ b/Presentation/ThesisPresentation/slides.tex
@@ -64,6 +64,7 @@ IfValueT={#3}{watermark text={#3}},#4}
 \input{slides/overview}
 \input{slides/mainContent}
 \input{slides/result}
+\input{slides/demo}
 \input{slides/conclusion}
 
 \appendix
