--- a/Presentation/ThesisPresentation/slides/introduction.tex
+++ b/Presentation/ThesisPresentation/slides/introduction.tex
@@ -1,4 +1,7 @@
 \section{Giới thiệu đề tài}
 \begin{frame}{GIỚI THIỆU ĐỀ TÀI}
-
+	\begin{figure}[htbp]
+		\centering
+		\includegraphics[scale=.6]{pic/Presentation-Page-7-BTS-Model.pdf}
+	\end{figure}
 \end{frame}
