--- a/Thesis-Template0_1_0/main.tex
+++ b/Thesis-Template0_1_0/main.tex
@@ -171,7 +171,11 @@
 %\addcontentsline{toc}{chapter}{Lời cam đoan}
 %\include{Appendix/reassurances}
 
+\include{Appendix/editComfirmation}
+
 \include{Appendix/thanks}
+
+\include{Appendix/commitment}
 
 \include{Appendix/tomtat.en}
 
